--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -1,65 +1,1 @@
-<% content_for :action_bar do %>
-  <div class="container buttons">
-    <%= link_to new_expense_path,
-      class: "button",
-      "data-turbo-frame": "side_panel_contents",
-      "data-action": "click->action-bar#disableNewExpense",
-      "data-action-bar-target": "enabledAdd" do
-    %>
-      <span class="icon is-medium">
-        <i class="fa-solid fa-plus fa-lg"></i>
-      </span>
-      <span class="text">New Expense</span>
-    <% end %>
-    <button class="button" data-action-bar-target="disabledAdd" style="display: none;" disabled="disabled">
-      <span class="icon is-medium">
-        <i class="fa-solid fa-plus fa-lg"></i>
-      </span>
-      <span class="text">New Expense</span>
-    </button>
-    <%= link_to new_payback_path,
-      class: "button",
-      "data-turbo-frame": "side_panel_contents",
-      "data-action": "click->action-bar#disablePayback",
-      "data-action-bar-target": "enabledSettle" do
-    %>
-      <span class="icon is-medium">
-        <i class="fa-solid fa-file-invoice-dollar fa-lg"></i>
-      </span>
-      <span class="text">Pay Back</span>
-    <% end %>
-    <button class="button" data-action-bar-target="disabledSettle" style="display: none;" disabled="disabled">
-      <span class="icon is-large">
-        <i class="fa-solid fa-file-invoice-dollar fa-lg"></i>
-      </span>
-      <span class="text">Pay Back</span>
-    </button>
-  </div>
-<% end %>
-
-<div class="transfers">
-  <div class="transfers-headings fixed-grid has-3-cols-mobile has-7-cols-tablet">
-    <div class="grid is-gap-0 is-hidden-mobile">
-      <div class="cell">Date</div>
-      <div class="cell">Payee</div>
-      <div class="cell">Memo</div>
-      <div class="cell has-text-right">Total</div>
-      <div class="cell is-col-span-2 has-text-right">Amount Owed</div>
-      <div class="cell has-text-right">Cumulative Sum</div>
-    </div>
-  </div>
-  <div class="transfers-content fixed-grid has-3-cols-mobile has-7-cols-tablet scroller">
-    <% last_date = nil %>
-    <% group_by_date(@person_transfers).each do |this_date, person_transfer_list| %>
-      <% if this_date != last_date %>
-        <% last_date = this_date %>
-        <div class="date is-hidden-tablet">
-          <%= this_date %>
-        </div>
-      <% end %>
-      <% person_transfer_list.each do |person_transfer| %>
-        <%= render partial: person_transfer.transfer, locals: { person_transfer: person_transfer } %>
-      <% end %>
-    <% end %>
-  </div>
-</div>
+Hello, world!
