--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -1,1 +1,9 @@
-<div id="transfers-index-app"></div>
+<%=
+    tag :div,
+        id: "transfers-index-app",
+        data: {
+            for_react: {
+                "connected.people": @connected_people
+            }
+        }
+%>
