--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -3,7 +3,8 @@
         id: "transfers-index-app",
         data: {
             for_react: {
-                "connected.people": @connected_people
+                "connected.people": @connected_people,
+                "person.transfers": @person_transfers
             }
         }
 %>
