Render flash messages in React app

--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -4,7 +4,8 @@
         data: {
             for_react: {
                 "connected.people": @connected_people,
-                "person.transfers": @person_transfers
+                "person.transfers": @person_transfers,
+                "flash": flash
             }
         }
 %>
