--- a/app/views/connection_mailer/connection_accepted_email.html.erb
+++ b/app/views/connection_mailer/connection_accepted_email.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= @to.name %> &lt;<%= @to.email %>&gt; has accepted your connection request on the Bentley Needs Money app.</p>
 
-You can <%= link_to 'start splitting expenses', transfers_url %> with <%= @to.name %>.
+You can <%= link_to 'start splitting expenses', debts_url %> with <%= @to.name %>.
 
 <p>Yours truly,</p>
 
