--- a/app/views/connection_mailer/connection_accepted_email.text.erb
+++ b/app/views/connection_mailer/connection_accepted_email.text.erb
@@ -4,7 +4,7 @@ Dear <%= @from.name %>,
 
 You can start splitting expenses with <%= @to.name %> by using the link below.
 
-<%= transfers_url %>
+<%= debts_url %>
 
 Yours truly,
 
