--- a/app/views/debts/index.html.erb
+++ b/app/views/debts/index.html.erb
@@ -1,10 +1,10 @@
 <%=
     tag :div,
-        id: "transfers-index-app",
+        id: "debts-index-app",
         data: {
             for_react: {
                 "connected.people": @connected_people,
-                "person.transfers": @person_transfers,
+                "debts": @debts,
                 "flash": flash
             }
         }
