--- a/app/views/debts/index.html.erb
+++ b/app/views/debts/index.html.erb
@@ -1,6 +1,7 @@
 <%=
     tag :div,
         id: "debts-index-app",
+        class: "outer-flex",
         data: {
             for_react: {
                 "connected.people": @connected_people,
