--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -142,6 +142,10 @@ body:has(.outer-flex),
   width: 40px !important;
 }
 
+.pagy-bulma.nav {
+  margin-top: 1rem;
+}
+
 @media screen and (max-width: 1023px) {
   body>.container {
     padding: 0 1rem;
