--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,8 @@
 
 <div class="block">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.invisible_captcha :username %>
+
     <%= f.bulma_form_element :text_field, :name, autofocus: true %>
 
     <%= f.bulma_form_element :email_field, :email, autocomplete: "email" %>
